--- a/styles/main.css
+++ b/styles/main.css
@@ -42,6 +42,8 @@ body{background-color: var(--bg-prim);}
 
     display: flex;
     flex-direction: column;
+
+    transition: background-position ease .5s;
 }
 
 .landing > *{
@@ -102,7 +104,7 @@ body{background-color: var(--bg-prim);}
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 .hello img{
