--- a/styles/design.css
+++ b/styles/design.css
@@ -1,10 +1,11 @@
 .progs h1{
     border: 0px solid red;
+    background-color: var(--bg-sec);
     font-size: 3rem;
     font-weight: 400;
     text-align: center;
     padding: var(--medium-gap) 0;
-    border-bottom: 2px solid rgba(0, 0, 0, .5);
+    border-bottom: 0px solid rgba(0, 0, 0, .5);
 }
 
 .progs p{
@@ -12,9 +13,13 @@
     padding: var(--medium-gap) 0;
     font-size: 2rem;
     text-align: center;
+
+    background-color: var(--bg-sec2);
 }
 
 .actual-programs{
+    background-color: var(--bg-sec2);
+
     border: 0px solid green;
     display: flex;
     justify-content: center;
@@ -45,7 +50,6 @@
 .prog-icons:hover{
     transform: scale(1.1, 1.1);
     transform-origin: center;
-    box-shadow: 0 0 1px;
 }
 
 .prog-icons:nth-child(1),
@@ -85,12 +89,12 @@
 
 .ps-work{
     border: 0px dotted blue;
-    margin-bottom: var(--large-gap);
+    margin-bottom: var(--huge-gap);
 }
 
 .ps-work p{
     border: 0px solid red;
-    padding: 1em 0;
+    padding: var(--large-gap) 0;
     width: 80%;
     font-size: 2rem;
     margin: 0 auto;
@@ -103,40 +107,108 @@
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    grid-auto-rows: auto;
+    grid-auto-rows: 100px;
 
     grid-auto-flow: row;
     gap: 1em;
 }
 
-.image img{
-    width: 100%;
-    border: 0px solid red;
+/* --- */
+
+.ps-work-container a:hover{
+    opacity: .5;
 }
 
 .image{
-    border: 0px dashed yellow ;
+    background-position: center center;
+    transition: opacity ease .2s;
+}
+
+.image img{
+    width: 100%;
+    height: 100%;
+    border: 0px solid red;
+}
+
+.normal{
+    background-color: gold;
+    grid-column: span 4;
+    grid-row: span 4;
+}
+
+.wide{ /*3D*/
+    background-color: hotpink;
+    grid-column: span 8;
+    grid-row: span 4;
+
+    background-image: url(../assets/3D.png);
+    background-size: cover;
+}
+
+.ultrawide{ /*vefxistyaosani*/
+    background-color: cyan;
+    grid-column: span 6;
+    grid-row: span 3;
+
+    background-image: url(../assets/vefx.jpg);
+    background-size: cover;
+}
+
+.sunset{
+    background-image: url(../assets/sunset.jpg);
+    background-size: cover;
+}
+
+.big{ /* Lenin */
+    background-color: pink;
+    grid-column: span 4;
+    grid-row: span 4;
+
+    background-image: url(../assets/lenin.jpg);
+    background-size: cover;
+}
+
+.colo1{
+    background-image: url(../assets/colossus1.jpg);
+    background-size: cover;
+}
+
+.colo2{
+    background-image: url(../assets/colossus2.jpg);
+    background-size: cover;
+}
+
+.ural{
+    background-image: url(../assets/ural.jpg);
+    background-size: cover;
+}
+
+/* ================================================= */
+/* Pr-work */
+/* ================================================= */
+
+.pr-work{
+    border: 0px solid cyan;
+    background-color: var(--bg-sec2);
+    text-align: center;
+
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.normal{
-    grid-column: span 6;
-    grid-row: span 2;
+.pr-work img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+
+    transition: box-shadow ease .5s;
+    margin-bottom: var(--large-gap);
 }
 
-.wide{
-    grid-column: span 6;
-    grid-row: span 2;
+.pr-work img:hover{
+    box-shadow: 0px 0px 0 5px #161619;
 }
 
-.ultrawide{
-    grid-column: span 12;
-    grid-row: span 2;
-}
 
-.big{
-    grid-column: span 5;
-    grid-row: span 2;
-}
