--- a/styles/web-dev.css
+++ b/styles/web-dev.css
@@ -38,6 +38,8 @@ body{
     align-items: center;
     justify-content: center;
     font-size: 1.5rem;
+
+    transition: transform ease .5s;
 }
 
 .html{
@@ -61,6 +63,11 @@ body{
     font-size: 1.2rem;
     background-color: gray;
     box-shadow: 0 0 10px;
+}
+
+.lang:hover{
+    transform: scale(1.1, 1.1);
+    transform-origin: center;
 }
 
 /* ================================================= */
