--- a/styles/web-dev.css
+++ b/styles/web-dev.css
@@ -22,6 +22,7 @@ body{
     border: 0px solid yellow;
     background-color: var(--bg-sec2);
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     padding: var(--large-gap) 0;
@@ -30,8 +31,8 @@ body{
 .lang{
     border: 0px solid red;
     border-radius: 50%;
-    min-width: 100px;
-    min-height: 100px;
+    width: clamp(50px, 100px, 120px);
+    height: clamp(50px, 100px, 120px);
     margin: 0 var(--small-gap);
 
     display: flex;
@@ -92,8 +93,8 @@ body{
 }
 
 .github-acc img,.github-acc{
-    width: clamp(200px, 400px, 440px);
-    height: clamp(200px, 400px, 440px);
+    width: clamp(100px, 300px, 440px);
+    height: clamp(100px, 300px, 440px);
     border-radius: 50%;
 
     transition: box-shadow ease .5s;
@@ -144,4 +145,24 @@ body{
                 -60px 0 6px #333,
                 -80px 0 10px #444
     ;
+}
+
+@media(max-width: 1024px){
+    .github{
+        justify-content: space-evenly;
+    }
+}
+
+@media(max-width: 550px){
+    :root{
+        font-size: 12px;
+    }
+    .lang{
+        border: 0px solid red;
+        border-radius: 50%;
+        width: clamp(50px, 70px, 120px);
+        height: clamp(50px, 70px, 120px);
+
+        margin: .5em;
+    }
 }
