--- a/styles/design.css
+++ b/styles/design.css
@@ -139,7 +139,7 @@
     grid-column: span 8;
     grid-row: span 4;
 
-    background-image: url(../assets/3D.png);
+    background-image: url(../assets/3D.jpg);
     background-size: cover;
 }
 
